[package]
name = "fak"
version = "0.1.1"
edition = "2021"
authors = ["TheKnarf"]
license = "MIT"
description = "Generate faker data for usage in scripts"
readme = "Readme.md"
homepage = "https://github.com/TheKnarf/fak"
repository = "https://github.com/TheKnarf/fak"
keywords = ["cli", "faker", "fak"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
fake = "2.9.2"
rand = "0.8.5"
